unpackaged/objects/LineItem__c.object
<CustomObject>
    <fields>
        <fullName>Invoice__c</fullName>
        <label>Invoice</label>
        <referenceTo>Invoice__c</referenceTo>
        <relationshipLabel>LineItems</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SubTotal__c</fullName>
        <formula>unit_price__c  *  unit_sold__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SubTotal</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>merchandise__c</fullName>
        <label>merchandise</label>
        <referenceTo>merchandise__c</referenceTo>
        <relationshipLabel>LineItems</relationshipLabel>
        <relationshipName>LineItems</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>unit_price__c</fullName>
        <label>unit price</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>unit_sold__c</fullName>
        <label>unit sold</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>LineItem</label>
    <nameField>
        <label>LineItem Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LineItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>order_out_of_stock</fullName>
        <active>true</active>
        <errorConditionFormula>IF( ISNEW(), merchandise__r.Inventory__c  &lt;  unit_sold__c, IF( unit_sold__c &lt; PRIORVALUE( unit_sold__c),FALSE, merchandise__r.Inventory__c &lt;(unit_sold__c - PRIORVALUE(unit_sold__c))))</errorConditionFormula>
        <errorDisplayField>unit_sold__c</errorDisplayField>
        <errorMessage>Order out of stock</errorMessage>
    </validationRules>
</CustomObject>